2013-09-09 Riccardo Mottola <rm@gnu.org>

	* Source/IRCObject.h
	* Source/IRCObject.m
	Explicit return type (id) in signatures.